feat: 支持添加学校校徽图片
